changed navbar links

--- a/home.html
+++ b/home.html
@@ -46,12 +46,13 @@
         <ul class="nav navbar-nav navbar-left">
           <li><a href="home.html">Home</a></li>
           <li><a href="team.html">Team</a></li>
-          <li><a href="https://github.com/sumeshpradhan">Source</a></li>
+          <li><a href="https://github.com/sumeshpradhan/PricePredict.github.io">Source</a></li>
        
         </ul>
       </div>
     </div>
   </div>
+
 
 
 
