changed name angali

--- a/team.html
+++ b/team.html
@@ -70,7 +70,7 @@
     </div>
     <div class="col-lg-4 col-sm-6 text-center mb-4">
       <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
-      <h3>Angali Nandi
+      <h3>Anjali Nandi
        
       </h3>
       <p>....</p>
