--- a/home.html
+++ b/home.html
@@ -76,10 +76,11 @@
 	<br><br><br><br><br><br>
   <div class="container">
     <h1 class="display-4">Price Retail Prediction</h1>
-    <p class="lead">It can be hard to know how much something’s really worth. Small details can mean big differences in pricing. For example, one of these sweaters cost $335 and the other cost $9.99. Can you guess which one’s which?
-Product pricing gets even harder at scale, considering just how many products are sold online. Clothing has strong seasonal pricing trends and is heavily influenced by brand names, while electronics have fluctuating prices based on product specs.
-E-commerce platforms for buying and selling goods (ebay,olx,quikr,etc) knows one problem deeply. They’d like to offer pricing suggestions to sellers, but this is tough because their sellers are enabled to put just about anything, or any bundle of things, on the platform
-In this Hackathon, we will build a Machine Learning model that automatically suggests the right product prices.
+    <p class="lead"> Today people shop mostly through the net. We have hundreds of websites selling millions of things online. Now, suppose you want to upload a product for sale, how will you predict the price of that product? We don't want to be in loss Right ?! again, while buying things from these ebsites, we wish to know a resonable price apt for a particular product. Nobody wish to pay more unless it's worth it. 
+	<p class="lead"> So, here we have a solution to problems like these. Using our Application " Retail Price Sugestion" we provide you a platform to predict prices for a product whenever we wish to sell it online or buy it from a website. 
+	</p>
+	<p class="lead"> This platform also provides an API which can be implemented to other platforms to predict price. 
+	</p>
  </p>
   </div>
 </section>
